--- a/FisrtJavaFx/src/application/MainScene.fxml
+++ b/FisrtJavaFx/src/application/MainScene.fxml
@@ -1,6 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.gluonhq.charm.glisten.control.BottomNavigationButton?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="698.0" prefWidth="934.0" style="-fx-background-color: oange;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controler_accueil">
+   <children>
+      <VBox alignment="CENTER" prefHeight="698.0" prefWidth="934.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <ImageView fitHeight="152.0" fitWidth="657.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../Downloads/téléchargement%20(1).png" />
+               </image>
+            </ImageView>
+            <Label prefHeight="18.0" prefWidth="464.0" text="Avec Nous Le voyage Est  à Vos Mésures, Voyagez Plus Vite, Loin En Toute Sécurité" textAlignment="CENTER" />
+            <ImageView fitHeight="135.0" fitWidth="153.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../Downloads/images%20(1).png" />
+               </image>
+            </ImageView>
+            <BorderPane prefHeight="0.0" prefWidth="658.0" style="-fx-background-color: violet;">
+               <top>
+                  <HBox alignment="CENTER" prefHeight="77.0" prefWidth="936.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="56.0" prefWidth="189.0" style="-fx-background-color: black;" text="Enregistrer Client" textAlignment="CENTER" textFill="#526e73" textOverrun="LEADING_WORD_ELLIPSIS">
+                           <font>
+                              <Font name="Broadway" size="20.0" />
+                           </font>
+                        </Button>
+                        <Button mnemonicParsing="false" prefHeight="54.0" prefWidth="195.0" style="-fx-background-color: grey;" text="Enregistrer Reservation" textFill="#080606">
+                           <font>
+                              <Font name="System Bold" size="20.0" />
+                           </font>
+                        </Button>
+                        <Button layoutX="423.0" layoutY="45.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="190.0" text="Nos Compagnies">
+                           <font>
+                              <Font name="System Bold" size="20.0" />
+                           </font>
+                        </Button>
+                        <Button layoutX="396.0" layoutY="45.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="171.0" style="-fx-background-color: red;" text="Caisse" textAlignment="CENTER">
+                           <font>
+                              <Font name="System Bold" size="20.0" />
+                           </font></Button>
+                        <BottomNavigationButton prefHeight="56.0" prefWidth="178.0" style="-fx-background-color: orange;" text="Accueil" />
+                     </children>
+                  </HBox>
+               </top>
+            </BorderPane>
+         </children>
+      </VBox>
+   </children>
+</AnchorPane>
